    + Add posh to the list of supported interpreters. Thanks to Raphael
      Geissert.
  * debbugs.pm: New module to encapsulate some of the common BTS functionality
    used by various scripts. Currently contains initial support for some
    SOAP methods.
  * bts: Use debbugs.pm for select()
  * tagpending: Fix the bts select call to also handle forwarded bugs
    (Closes: #464787)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Thu, 07 Feb 2008 10:42:20 +0000

devscripts (2.10.15) unstable; urgency=low

  [ Patrick Schoenfeld ]
  * checkbashisms: Add a check for the $(<) bashism (which is catting a file)
    (Closes: #463743)
  * dget: Implemented a '--build' parameter which builds a package with
    dpkg-buildpackage after its download (Closes: #457977)
  * build-rdeps: Add a license header so that licensecheck does recognize
    the license and copyright

  [ Adam D. Barratt ]
  * checkbashisms:
    + Correct the fix for #461653. >& is permitted by POSIX, &> isn't. Thanks
      to Sven Joachim.
    + Modify the "echo -e", "exec -[acl]" and "let" tests to require
      whitespace before the matched text in order to reduce false positives.
      Thanks to Russ Allbery for pointing the issue out.
  * debchange: Allow the use of an unknown / unofficial distribution to be
    forced (Closes: #463449)
  * bts:
    + Allow the generated e-mail to be edited before sending
      (Closes: #456331)
    + Handle cache files generated by versions of bts that didn't name
      attachments correctly (Closes: #464079)
  * uscan:
    + Fix quoting of a manpage example (Closes: #452934)
    + Output a message if --report-status was used but no watch file was found
      (Closes: #409128)
  * debuild: Recognise -j as a valid option when it's passed on the command
    line as well as in the configuration file (Really closes: #457235)
  * debcommit: Check the debian directory for indications of version control